# event-bus

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
.github/workflows/: ci.yml
EventBus/: EventBus.hpp
Tests/: CMakeLists.txt  EventBusTest.cpp
example/: CMakeLists.txt  example.cpp
scrpits/: build.sh  install.sh
tests/: CMakeLists.txt  EventBusTest.cpp  NamedEventBusTest.cpp
